# better-bot

./: .gitignore  .travis.yml  LICENSE  README.md  better-bot.cabal  build_in_docker.sh  cp_support_shared_libs.sh  index.js  main.js  stack.yaml
app/: BookSlot.hs  Main.hs  Types.hs
src/Better/: Types.hs
src/Network/Better/: Aeson.hs  Session.hs  Types.hs
test/: Spec.hs  allocated-basket.html  basket.html
