name:                better-bot
version:             0.1.0.0
synopsis:            Bot for Better
description:         Please see README.md
homepage:            https://github.com/jkozlowski/better-bot
license:             MIT
license-file:        LICENSE
author:              Jakub Kozlowski
maintainer:          mail@jakub-kozlowski.com
copyright:           2015 Jakub Kozlowski
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Better.Types
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable better-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , better-bot
  default-language:    Haskell2010

test-suite better-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , better-bot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jkozlowski/better-bot
